--- a/page1.html
+++ b/page1.html
@@ -1,6 +1,10 @@
 <html>
+<head>
+        <link src="styles/main.css" rel=stylesheet">
+</head>
 <body>
-	<h1>Page1 </h1>
-	<footer>Copyright 2023</footer>
+        <h1>Page 1</h1>
+        <footer>Copyright 2023</footer>
 </body>
 </html>
+
