add h2 on page1

--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,8 @@
 </head>
 <body>
         <h1>Page 1</h1>
-        <footer>Copyright 2023</footer>
+	<h2>Menu</h2>
+	<footer>Copyright 2023</footer>
 </body>
 </html>
 
