--- a/main.html
+++ b/main.html
@@ -14,7 +14,10 @@
 	<nav>
 		<a href="page1.html">Page 1</a>
 		<a href="http://specialist.ru">Specialist.ru</a>
+		<a href="page2.html">Page 2</a>
 	</nav>
+	<h2>Main page article title</h2>
+	<article>Main page article</article>
 	<footer>Copyright 2023</footer>
 </body>
 </html>
