add p tag in article on main

--- a/main.html
+++ b/main.html
@@ -17,7 +17,9 @@
 		<a href="page2.html">Page 2</a>
 	</nav>
 	<h1>Main page article title</h1>
-	<article>Main page article modified</article>
+	<article>
+		<p>Main page article modified
+	</article>
 	<footer>Copyright 2023</footer>
 </body>
 </html>
